desktop nav fix and align. about page template setup. css structure update

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,3 +1,4 @@
+//Rules
 $color1: #cad2c5;
 $color2: #84a98c;
 $color3: #52796f;
@@ -19,9 +20,38 @@ $black: #000;
   }
 }
 
+//Partice.js code/background
+#particles-js {
+  background-size: cover;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -999;
+}
+
 //Main Styles
 body {
   background-color: $color5;
+
+  .home-page,
+  .about-page {
+    @include for-desktop-only {
+      margin-left: 100px;
+      margin-top: 15%;
+    }
+
+    @include for-mobile-only {
+      margin-left: 55px;
+      margin-top: 25%;
+    }
+  }
+
+  a:focus {
+    outline: 0;
+    border: none;
+  }
 }
 
 #nav {
@@ -41,60 +71,54 @@ body {
     z-index: 3;
     min-height: 500px;
   }
-}
 
-#nav a {
-  font-weight: bold;
-  color: #fff;
-}
-
-#nav a.router-link-exact-active {
-  color: $color3;
-}
-
-.nav-item {
-  .link-icon {
-    opacity: 1;
-  }
-  .link-text {
-    opacity: 0;
+  a {
+    font-weight: bold;
+    color: #fff;
+    @include for-desktop-only {
+      font-size: 20px;
+    }
   }
 
-  &:hover {
+  a.router-link-exact-active {
+    color: $color3;
+  }
+
+  .nav-item {
+    text-align: center;
+    @include for-desktop-only {
+      margin: 15px 0;
+    }
+  
     .link-icon {
-      opacity: 0;
+      display: block;
     }
     .link-text {
-      opacity: 1;
+      display: none;
+    }
+  
+    &:hover {
+      .link-icon {
+        display: none;
+      }
+      .link-text {
+        display: block;
+      }
     }
   }
 }
 
-#particles-js {
-  background-size: cover;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -999;
-}
-
-.home {
+.home-page {
   .HomeHero {
     @include for-desktop-only {
       width: 500px;
-      margin-left: 105px;
-      margin-top: 15%;
     }
 
     @include for-mobile-only {
       max-width: 100%;
-      margin-left: 55px;
-      margin-top: 25%;
     }
 
-    .title {
+    .home-title {
       color: $white;
 
       span {
@@ -120,6 +144,12 @@ body {
 
       margin-top: 5px;
     }
+  }
+}
+
+.about-page {
+  .about-title {
+    color: $white;
   }
 }
 
